--- a/thesis/I/1.1.md
+++ b/thesis/I/1.1.md
@@ -1,5 +1,6 @@
 \newpage 
 
-# CAPÍTULO I. EL OBJETO DE ESTUDIO
+# Capítulo I. El objeto de estudio
 
 ## 1.1. Contextualización del objeto de estudio
+
