--- a/thesis/I/1.1.md
+++ b/thesis/I/1.1.md
@@ -1,6 +1,6 @@
 \newpage 
 
-# Capítulo I. El objeto de estudio
+## Capítulo I. El objeto de estudio
 
-## 1.1. Contextualización del objeto de estudio
+### 1.1. Contextualización del objeto de estudio
 
