--- a/thesis/II/2.1.md
+++ b/thesis/II/2.1.md
@@ -1,5 +1,5 @@
 \newpage
 
-# Capítulo II. Marco teórico
+## Capítulo II. Marco teórico
 
-## 2.1. Antecedentes de la investigación
+### 2.1. Antecedentes de la investigación
