--- a/thesis/III/3.1.md
+++ b/thesis/III/3.1.md
@@ -1,5 +1,5 @@
 \newpage
 
-# Capítulo III. Metodología desarrollada
+## Capítulo III. Metodología desarrollada
 
-## 3.1. Tipo de investigación
+### 3.1. Tipo de investigación
