--- a/thesis/IV/4.1.md
+++ b/thesis/IV/4.1.md
@@ -1,5 +1,5 @@
 \newpage
 
-# Capítulo IV. Resultados y discusión
+## Capítulo IV. Resultados y discusión
 
-## 4.1. Resultados
+### 4.1. Resultados
