--- a/thesis/V/5.1.md
+++ b/thesis/V/5.1.md
@@ -1,5 +1,5 @@
 \newpage
 
-# Capítulo V. Propuesta de la investigación
+## Capítulo V. Propuesta de la investigación
 
-## 5.1. Fundamentos teóricos de la propuesta de la investigación
+### 5.1. Fundamentos teóricos de la propuesta de la investigación
